# asstk

./: .gitignore  CMakeLists.txt  README  gen_cmake  main.cpp
src/: main.cpp  mesh_masher.cpp
tools/: consolidate_obj
